ajustes, melhorando o tratamento de exceções e modelo de usuário.